--- a/index.html
+++ b/index.html
@@ -8,6 +8,14 @@
     <title>Andrew Ochoa's Website</title>
 </head>
 <body>
-    
+    <header>
+        <img src="images/racoon.png.png" alt="Racooon with two thumbs" height="100">
+
+    </header>
+    <main>
+        <h1>Welcome to my website!</h1>
+   <h2>Andrew0choa.github.io</h2>   
+   <h3>Lorem</h3>  
+    </main>
 </body>
 </html>
