--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <main>
         <h1>Welcome to my website!</h1>
    <h2>Andrew0choa.github.io</h2>   
-   <h3>Lorem</h3>  
+   <h3>Lorem100</h3>  
     </main>
 </body>
 </html>
