--- a/index.html
+++ b/index.html
@@ -16,6 +16,13 @@
         <h1>Welcome to my website!</h1>
    <h2>Andrew0choa.github.io</h2>   
    <h3>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Magni deserunt odit amet, provident nisi impedit! Architecto illum animi commodi delectus nihil! Vel cupiditate fugiat laborum eveniet officia deleniti, assumenda optio, enim incidunt porro et quaerat eius eaque repellendus dolor doloremque ducimus nihil sequi atque illum culpa non? Quibusdam, nesciunt deserunt. Corrupti nihil eveniet, nostrum cumque maiores consectetur ratione ex porro qui maxime ipsum perspiciatis, saepe reiciendis velit provident! Placeat aspernatur temporibus architecto ipsam eaque quod in animi soluta ipsa tenetur. Voluptas ratione sunt tenetur voluptatum accusantium nesciunt, obcaecati, sapiente, aut asperiores explicabo possimus. Provident laborum ipsam eum, magnam fugiat doloremque.</h3>  
-    </main>
+    <ul>
+        <li>Education</li>
+        <li>Work</li>
+        <li>Knowledge and Skills</li>
+        <li>Certification</li>
+        <li><a href="#"> Class Projects</a></li>
+    </ul>
+</main>
 </body>
 </html>
