--- a/index.html
+++ b/index.html
@@ -23,6 +23,9 @@
         <li>Certification</li>
         <li><a href="#"> Class Projects</a></li>
     </ul>
+    <p>Click here to download <a href="files/MGIS 3320 Q1(1).docx">my resume.</a></p>
+    <p>Click here to go to <a href="https://www.linkedin.com/in/andrew-ochoa-821a06255">My LinkedIn</a></p>
+    <p>Contact me at Aao051@shsu.edu for any inquiries.</p>
 </main>
 </body>
 </html>
