--- a/index.html
+++ b/index.html
@@ -6,23 +6,25 @@
     <meta name="decription" content="Andrew Ochoa's Website at SHSU">
     <meta name="keywords" content="Andrew, Ochoa, MIS, SHSU">
     <title>Andrew Ochoa's Website</title>
+    <link rel="stylesheet" href="styles/main.css">
 </head>
 <body>
-    <header>
-        <img src="images/racoon.png.png" alt="Racooon with two thumbs" height="100">
-
-    </header>
-    <main>
-        <h1>Welcome to my website!</h1>
-   <h2>Andrew0choa.github.io</h2>   
+ <header>
+    <img src="images/racoon.png.png" alt="Racooon with two thumbs" height="100">
+    <h1 class="shadow">Welcome to my website!</h1>
+   <h2 class="shadow">Andrew0choa.github.io</h2>   
+</header>
+<main>
    <h3>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Magni deserunt odit amet, provident nisi impedit! Architecto illum animi commodi delectus nihil! Vel cupiditate fugiat laborum eveniet officia deleniti, assumenda optio, enim incidunt porro et quaerat eius eaque repellendus dolor doloremque ducimus nihil sequi atque illum culpa non? Quibusdam, nesciunt deserunt. Corrupti nihil eveniet, nostrum cumque maiores consectetur ratione ex porro qui maxime ipsum perspiciatis, saepe reiciendis velit provident! Placeat aspernatur temporibus architecto ipsam eaque quod in animi soluta ipsa tenetur. Voluptas ratione sunt tenetur voluptatum accusantium nesciunt, obcaecati, sapiente, aut asperiores explicabo possimus. Provident laborum ipsam eum, magnam fugiat doloremque.</h3>  
-    <ul>
+   <nav>
+    <ul id="list">
         <li>Education</li>
         <li>Work</li>
         <li>Knowledge and Skills</li>
         <li>Certification</li>
         <li><a href="#"> Class Projects</a></li>
     </ul>
+    </nav>
     <p>Click here to download <a href="files/mis.docx">my resume.</a></p>
     <p>Click here to go to <a href="https://www.linkedin.com/in/andrew-ochoa-821a06255" target="_blank">My LinkedIn</a></p>
     <p>Contact me at <em> <a href="mailto:Aao051@shsu.edu">my email adress</a></em> for any inquiries.</p>
@@ -30,7 +32,7 @@
     <hr>
 </main>
 <footer>
-    <p>&copy; 2025 Andrew Ochoa</p>
+    <p class="copyright">&copy; 2025 Andrew Ochoa</p>
 </footer>
 </body>
 </html>
