--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <li><a href="#"> Class Projects</a></li>
         </ul>
     </nav>
-    <div>
+    <div class="contact">
         <p>Click here to download <a href="files/mis.docx">my resume.</a></p>
         <p>Click here to go to <a href="https://www.linkedin.com/in/andrew-ochoa-821a06255" target="_blank">My LinkedIn</a></p>
         <p>Contact me at <em> <a href="mailto:Aao051@shsu.edu">my email adress</a></em> for any inquiries.</p>
