--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
  <header>
-    <img src="images/racoon.png.png" alt="Racooon with two thumbs" height="100">
+    <img src="images/Small_Fun_Raccoon.webp" alt="Brown Racooon with two thumbs" height="100">
     <h1 class="shadow">Welcome to my website!</h1>
    <h2 class="shadow">Andrew0choa.github.io</h2>   
 </header>
