--- a/project.html
+++ b/project.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-        <img src="images/Small_Fun_Raccoon.webp" alt="Brown Racoon with thumbs">
+        <img src="images/Small_Fun_Raccoon.webp" alt="Brown Racoon with thumbs" height="100">
         <h1 class="shadow">Welcome to my Website!</h1>
         <h2 class="shadow">Andrew0choa.github.io</h2>
     </header>
