--- a/project.html
+++ b/project.html
@@ -15,7 +15,7 @@
     <article>
         <h3>MGIS 3320: Web Development Project</h3>
         <img src="images/F0013316-Supernova_explosion_artwork.avif" alt="SuperNova" height="100">
-        <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Laudantium culpa distinctio eveniet ex consectetur. Obcaecati, asperiores deserunt neque, voluptate modi veritatis ipsum cum minima nulla id nostrum atque, blanditiis natus!</p>
+<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloremque reiciendis inventore, quam possimus saepe, ab necessitatibus laboriosam voluptatem nemo similique ipsum provident fugiat pariatur, delectus minima asperiores esse dolor numquam. Lorem ipsum dolor sit amet consectetur adipisicing elit. Id eius odit quia quod, veniam, optio rerum, voluptatibus placeat facilis enim eos! Facilis ad dolores corrupti quas esse quae facere enim?</p>
     </article>
     <aside>
         <h4>References</h4>
