--- a/styles/Exam.html
+++ b/styles/Exam.html
@@ -55,8 +55,8 @@
         </main>
         <hr class="content-divider">
         <footer>
-            &copy; 2025 Your Name |
-            <a href="https://linkedin.com/in/yourusername" target="_blank">LinkedIn</a>
+            &copy; 2025 Andrew Ochoa |
+            <a href="https://www.linkedin.com/in/andrew-ochoa-821a06255/" target="_blank">LinkedIn</a>
         </footer>
     </div>
 </body>
