--- a/exam.html
+++ b/exam.html
@@ -36,21 +36,21 @@
                         <img src="https://www.nasa.gov/sites/default/files/thumbnails/image/nasa-logo-web-rgb.png" alt="NASA Logo" class="intro-image">
                     </a>
                     <p>
-                        <span class="first-letter">L</span>orem ipsum dolor sit amet, consectetur adipiscing elit. Integer nec odio. Praesent libero. Sed cursus ante dapibus diam. Sed nisi. Nulla quis sem at nibh elementum imperdiet. Duis sagittis ipsum. Praesent mauris. Fusce nec tellus sed augue semper porta. Mauris massa. <b>Etc... (add up to 500 words)</b>
+                        <span class="first-letter">L</span>orem ipsum dolor sit amet, consectetur adipiscing elit. Integer nec odio. Praesent libero. Sed cursus ante dapibus diam. Sed nisi. Nulla quis sem at nibh elementum imperdiet. Duis sagittis ipsum. Praesent mauris. Fusce nec tellus sed augue semper porta. Mauris massa. <b>Etc... (add your 500 word block here)</b>
                     </p>
                 </div>
                 <h2 id="method">Method</h2>
-                <p><span class="first-letter">M</span>auris non tempor quam, et lacinia sapien. Mauris accumsan eros eget libero posuere vulputate...</p>
+                <p><span class="first-letter">M</span>auris non tempor quam, et lacinia sapien. Mauris accumsan eros eget libero posuere vulputate. Etiam elit elit, elementum sed varius at, adipiscing vitae est. Sed nec felis pellentesque, lacinia dui sed, ultricies sapien. Pellentesque orci lectus, consectetur vel posuere posuere, rutrum eu ipsum. Aliquam eget odio sed ligula iaculis consequat at eget orci.</p>
                 <h2 id="analysis">Analysis</h2>
-                <p><span class="first-letter">A</span>liquam erat volutpat. In hac habitasse platea dictumst. Etiam pharetra, tellus sit amet congue vulputate...</p>
+                <p><span class="first-letter">A</span>liquam erat volutpat. In hac habitasse platea dictumst. Etiam pharetra, tellus sit amet congue vulputate, nisi erat iaculis nunc, ac gravida nulla elit nec ante. Cras facilisis, urna vitae convallis sollicitudin, urna felis dictum tortor, vel sollicitudin mauris tortor vel velit.</p>
                 <h2 id="measurement">Measurement</h2>
-                <p><span class="first-letter">M</span>auris non tempor quam, et lacinia sapien. Mauris accumsan eros eget libero posuere vulputate...</p>
+                <p><span class="first-letter">M</span>auris non tempor quam, et lacinia sapien. Mauris accumsan eros eget libero posuere vulputate. Etiam elit elit, elementum sed varius at, adipiscing vitae est.</p>
                 <h2 id="structure">Structure</h2>
-                <p><span class="first-letter">S</span>ed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium...</p>
+                <p><span class="first-letter">S</span>ed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo.</p>
                 <h2 id="results">Results</h2>
-                <p><span class="first-letter">R</span>esultant text with lorem ipsum...</p>
+                <p><span class="first-letter">R</span>esultant text with lorem ipsum, etc.</p>
                 <h2 id="discussion">Discussion</h2>
-                <p><span class="first-letter">D</span>onec scelerisque dolor id nunc dictum, eu tempor odio dictum...</p>
+                <p><span class="first-letter">D</span>onec scelerisque dolor id nunc dictum, eu tempor odio dictum. Sed cursus ante dapibus diam.</p>
             </article>
         </main>
         <hr class="content-divider">
