--- a/exam.html
+++ b/exam.html
@@ -33,7 +33,7 @@
                 <h2 id="introduction">Introduction</h2>
                 <div class="intro-wrap">
                     <a href="https://www.nasa.gov" target="_blank">
-                        <img src="https://www.nasa.gov/sites/default/files/thumbnails/image/nasa-logo-web-rgb.png" alt="NASA Logo" class="intro-image">
+                        <img src="planet.jpg" alt="Planet" class="intro-image">
                     </a>
                     <p>
                         <span class="first-letter">L</span>orem ipsum dolor sit amet, consectetur adipiscing elit. Integer nec odio. Praesent libero. Sed cursus ante dapibus diam. Sed nisi. Nulla quis sem at nibh elementum imperdiet. Duis sagittis ipsum. Praesent mauris. Fusce nec tellus sed augue semper porta. Mauris massa. <b>Etc... (add your 500 word block here)</b>
