--- a/exam.html
+++ b/exam.html
@@ -8,13 +8,14 @@
 <body>
     <div class="page-border">
         <nav>
-            <ul class="menu-bar">
-                <li><a href="index.html">Home</a></li>
-                <li><a href="projectA.html">Project A</a></li>
-                <li><a href="exam.html">Project B</a></li>
-                <li><a href="#">About Us</a></li>
-            </ul>
-        </nav>
+    <ul class="menu-bar">
+        <li><a href="index.html">Home</a></li>
+        <li><a href="menu.html">Project A</a></li>
+        <li><a href="exam.html">Project B</a></li>
+        <li><a href="#">About Us</a></li>
+    </ul>
+</nav>
+
         <aside>
             <ul class="aside-list">
                 <li><a href="#introduction">Introduction</a></li>
