--- a/rwd.html
+++ b/rwd.html
@@ -20,7 +20,7 @@
 
     <ul class="menu">
       <li><a class="current" href="rwd.html">Home</a></li>
-      <li><a href="files/mis.docx" target="_blank" rel="noopener">Resume</a></li> <!-- 20 change href to your resume file -->
+      <li><a href="files/mis.docx" target="_blank" rel="noopener">Resume</a></li>
       <li><a href="#">Projects</a></li> 
       <li><a href="#">Experience</a></li> 
       <li><a href="#">Contact Me</a></li> 
